--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
             <li class="total">Total<span>$ </span></li>
         </ul>
     </div>
+    <br><br><br><br><br><br><br>
         <!-- PIE DE PAGINA -->
     <div class="fixed">
         <ul>
-            <li>Integrantes</li>
+            <li id="t">Integrantes:</li>
             <li>Rocha López José Luis</li>
             <li>Castillo Rendon Cristian Adelmo</li>
             <li>Stephanie Parente</li>
