--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Style/Style.css">
     <title>Automata</title>
+    <link rel="shortcut icon" href="./image/favicon.png">
 </head>
 <body>
     <!-- TITULO -->
