--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
     <br><br><br><br><br><br><br>
-        <!-- PIE DE PAGINA -->
+    <!-- INTEGRANTES -->
     <div class="fixed">
         <ul>
             <li id="t">Integrantes:</li>
